@@ -1005,7 +1005,7 @@ customer_gone_seconds SMALLINT(5) UNSIGNED default '30',
 agent_display_fields VARCHAR(100) default '',
 am_message_wildcards ENUM('Y','N') default 'N',
 manual_dial_timeout VARCHAR(3) default '',
-routing_initiated_recordings ENUM('Y','N') default 'N',
+routing_initiated_recordings ENUM('Y','N') default 'Y',
 manual_dial_hopper_check ENUM('Y','N') default 'N',
 callback_useronly_move_minutes MEDIUMINT(5) UNSIGNED default '0',
 ofcom_uk_drop_calc ENUM('Y','N') default 'N',
@@ -1274,7 +1274,7 @@ nanq_lead_reset ENUM('Y','N') default 'N',
 wait_time_lead_reset ENUM('Y','N') default 'N',
 hold_time_lead_reset ENUM('Y','N') default 'N',
 status_group_id VARCHAR(20) default '',
-routing_initiated_recordings ENUM('Y','N') default 'N',
+routing_initiated_recordings ENUM('Y','N') default 'Y',
 on_hook_cid_number VARCHAR(18) default '',
 customer_chat_screen_colors VARCHAR(20) default 'default',
 customer_chat_survey_link TEXT,
